--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,135 @@
-.App {
+
+.app-title-container{
+ 
+  background-color: rgb(247, 242, 242);
+  color: rgb(10, 10, 10);
+  width: fit-content;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 20px;
+  padding: 9px;
+  border-radius: 50px;
+  border: 3px solid rgb(19, 18, 18);
+}
+.app-title-container:hover{
+  cursor: pointer;
+  color: black;
+  background-color: white;
+  transition: 0.3s;
+}
+
+.app-title{
   text-align: center;
+  margin:0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.main-emoji-container{
+  height: 250px;
+  width: 250px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 100px;
+  border-radius: 20px;
+  box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.4);
+  
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.main-emoji{
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+  height: 100%;
+}
+
+.emoji-container{
+  background-color: none;
+  display: flex;
+  justify-content: space-evenly;
+  width: 400px;
+  margin-top: 80px;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 50px;
+  border: 1px black solid;
+}
+
+.emoji-item{
+  font-size: 40px;
+  margin: 10px;
+  cursor: pointer;
+  border-radius: 50%;
+  border: 1px solid white;
+  background-color: aliceblue;
+}
+
+.emoji-item:hover{
+  transform: scale(1.4);
+}
+
+.emoji-editor-container{
+  display: flex;
+  justify-content: space-around;
+}
+
+.colors-container{
+  background-color: none;
+  display: flex;
+  justify-content: space-evenly;
+  width: 500px;
+  padding: 10px;
+  border-radius: 30px;
+  margin-top: 100px;
+}
+
+.color-item{
+  border: 1px solid gray;
+  border-radius: 5px;
+  width: 60px;
+  height: 40px;
+}
+
+.color-item:hover{
+  cursor: pointer;
+  transform: scale(1.1);
+}
+
+.bg-green{
+  background-color: rgb(28, 59, 28);
+}
+
+.bg-gray{
+  background-color: gray;
+}
+
+.bg-red{
+  background-color: rgb(155, 10, 10);
+}
+
+.bg-yellow{
+  background-color: yellow;
+}
+
+.bg-white{
+  background-color: white;
+}
+
+.size-container{
+  background-color: white;
+  width: fit-content;
+  height: 20px;
+  padding: 10px;
+  border-radius: 30px;
+  margin-top: 50px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.size-slider{
+  width: 100%;
+}
+.heading{
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  font-size: medium;
 }
